# finance-agent

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
app/: main.py
app/ai/prompts/: human_prompt.py  system_prompt.py
app/ai/structured_outputs/: ai_response.py
app/api/v1/: stock.py
app/core/: config.py
app/schemas/: stock.py
app/services/: finance.py  news.py  openai_service.py
