[project]
name = "finance-agent"
version = "0.1.0"
description = ""
authors = [
    {name = "raulwaard",email = "raulwarddev@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13, <4.0"
dependencies = [
    "pandas (>=3.0.0,<4.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "openai (>=2.17.0,<3.0.0)",
    "fastapi (>=0.128.2,<0.129.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "numpy (>=2.4.2,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "langgraph (>=1.0.8,<2.0.0)",
    "langchain (>=1.2.8,<2.0.0)",
    "yfinance (>=1.1.0,<2.0.0)",
    "ipykernel (>=7.1.0,<8.0.0)",
    "langchain-openai (>=1.1.7,<2.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)"
]

[tool.poetry]
packages = [{include = "finance_agent", from = "."}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.15.0,<0.16.0)"
]

[tool.ruff]
line-length = 88 # Mesma linha do Black
extend-exclude = ["migrations"]

[tool.ruff.lint]
select = ["E", "F", "I"] # E (pycodestyle), F (Pyflakes), I (Isort)
ignore = []

[tool.ruff.format]
quote-style = "double"
